kubernetes/delete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delete-service
  template:
    metadata:
      labels:
        app: delete-service
    spec:
      containers:
      - name: delete-service
        image: car-microservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
