kubernetes/getall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getall-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getall-service
  template:
    metadata:
      labels:
        app: getall-service
    spec:
      containers:
      - name: getall-service
        image: car-microservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
