kubernetes/getbyid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getbyid-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getbyid-service
  template:
    metadata:
      labels:
        app: getbyid-service
    spec:
      containers:
      - name: getbyid-service
        image: car-microservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
