kubernetes/create-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: create-service
spec:
  selector:
    app: create-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
