kubernetes/delete-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-service
spec:
  selector:
    app: delete-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
