kubernetes/getbyid-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getbyid-service
spec:
  selector:
    app: getbyid-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
