kubernetes/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-car
spec:
  selector:
    app: mariadb-car
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
