kubernetes/update-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-service
spec:
  selector:
    app: update-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
